--- a/flaghoisting.html
+++ b/flaghoisting.html
@@ -21,9 +21,9 @@
             <div class="flagSupport"></div>
         </div>
     </div>
-    <!-- <div class="crowd">
-        <video class="crowdImg" width="500" height="200" src="./assets/images/ind.mp4" />
-    </div> -->
+    <div class="crowd">
+        <img class="crowdImg" width="500" height="200" src="./assets/images/Indian.jpeg" />
+    </div>
 
     <div class="independenceDay">
         <img class="independenceDayImg" width="300" height="200" src="./assets/images/independence.jpg" />
