--- a/flaghoisting.html
+++ b/flaghoisting.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="crowd">
-        <img class="crowdImg" width="500" height="200" src="./assets/images/Indian.jpeg" />
+        <img class="crowdImg" width="500" height="200" src="./assets/images/ind.mp4" />
     </div>
 
     <div class="independenceDay">
